<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/ic_bookings"
        android:title="@string/nav_bookings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_reports"
        android:title="@string/nav_reports"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_expenses"
        android:icon="@drawable/ic_expenses"
        android:title="@string/nav_expenses"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/ic_users"
        android:title="@string/nav_users"
        app:showAsAction="ifRoom" />

</menu>